Removed the key for security purposes.

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,21 @@ repositories {
 	mavenCentral()
 }
 
+bootJar {
+	mainClass = 'com.financetrust.test.TestApplication'
+}
+
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+springBoot {
+	buildInfo()
+}
+
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
