--- a/api-assignment/Dockerfile
+++ b/api-assignment/Dockerfile
@@ -4,7 +4,7 @@ FROM php:8.1.10-fpm
 # Set the working directory
 WORKDIR /var/www
 
-# Install system dependencies
+# Install system dependencies and PHP extensions in one layer
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpng-dev \
@@ -19,13 +19,9 @@ RUN apt-get update && apt-get install -y \
     curl \
     libonig-dev \
     libxml2-dev \
-    libzip-dev
-
-# Clear cache
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# Install PHP extensions
-RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
+    libzip-dev \
+    && docker-php-ext-install mbstring exif pcntl bcmath gd zip \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
@@ -33,8 +29,8 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 # Copy the existing application directory contents to the working directory
 COPY . .
 
-# Copy the existing application directory permissions to the working directory
-COPY --chown=www-data:www-data . .
+# Ensure the application directory has the correct permissions
+RUN chown -R www-data:www-data /var/www
 
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
